// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should re-render when size changed 1`] = `ReactWrapper {}`;

exports[`Badge should re-render when size changed 2`] = `ReactWrapper {}`;

exports[`Badge should render different types 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {},
    "children": Array [
      Node {
        "attribs": Object {
          "class": "badge  ",
        },
        "children": Array [
          Node {
            "data": "badge",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "badge",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Node {
            "attribs": Object {
              "class": "badge  ",
            },
            "children": Array [
              Node {
                "data": "badge",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "badge",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Node {
              "attribs": Object {
                "class": "badge  ",
              },
              "children": Array [
                Node {
                  "data": "badge",
                  "next": Node {
                    "attribs": Object {},
                    "children": Array [
                      Node {
                        "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "style",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": Node {
                    "data": "badge",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "badge  ",
        },
        "children": Array [
          Node {
            "data": "badge",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "badge",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Node {
            "attribs": Object {
              "class": "badge  ",
            },
            "children": Array [
              Node {
                "data": "badge",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "badge",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "badge  ",
        },
        "children": Array [
          Node {
            "data": "badge",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "badge",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Node {
            "attribs": Object {
              "class": "badge  ",
            },
            "children": Array [
              Node {
                "data": "badge",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "badge",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "badge  ",
        },
        "children": Array [
          Node {
            "data": "badge",
            "next": Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
          Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #e00;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "data": "badge",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "badge  ",
          },
          "children": Array [
            Node {
              "data": "badge",
              "next": Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
            Node {
              "attribs": Object {},
              "children": Array [
                Node {
                  "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #f5a623;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "style",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "data": "badge",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              "type": "style",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Node {
            "attribs": Object {
              "class": "badge  ",
            },
            "children": Array [
              Node {
                "data": "badge",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #666;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "data": "badge",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": Node {
              "attribs": Object {
                "class": "badge  ",
              },
              "children": Array [
                Node {
                  "data": "badge",
                  "next": Node {
                    "attribs": Object {},
                    "children": Array [
                      Node {
                        "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "style",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
                Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #0070f3;
          color: white;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": Node {
                    "data": "badge",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {},
    "x-attribsPrefix": Object {},
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should supoort text 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "badge  ",
    },
    "children": Array [
      Node {
        "data": "count",
        "next": Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #000;
          color: #fff;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
      Node {
        "attribs": Object {},
        "children": Array [
          Node {
            "data": "
        .badge {
          display: inline-block;
          border-radius: 16px;
          font-variant: tabular-nums;
          line-height: 1;
          vertical-align: middle;
          background-color: #000;
          color: #fff;
          border: 0;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.25 * 16px) calc(0.4375 * 16px) calc(0.25 * 16px)
            calc(0.4375 * 16px);
          margin: 0 0 0 0;
        }

        .dot {
          padding: calc(0.25 * 16px) calc(0.25 * 16px);
          border-radius: 50%;
          user-select: none;
        }
      ",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "style",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "data": "count",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
        "type": "style",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
